# ickle

./: AUTHORS  ChangeLog  FAQ  Makefile  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  TRANSLATION.HOWTO  acinclude.m4  aclocal.m4  autogen.sh  config.cache  config.h  config.h.in  config.status  configure  configure.ac  configure.in  libtool  log
control/: CommandLineParser.cpp  CommandLineParser.h  IckleControl.cpp  IckleControl.h  Makefile.am  ickle_control.1  main.cpp
ctrlsocket/: ControlCommands.h  ControlSocket.cpp  ControlSocket.h  Makefile.am
debian/: README.Debian  changelog  control  copyright  ickle-common.README.Debian  ickle-common.files  ickle-control.dirs  ickle-control.files  ickle-control.links  ickle-control.manpages  ickle-dev.files  ickle-gnome.files  ickle-gnome.links  ickle-gnome.manpages  ickle-gnome.menu  ickle.files  ickle.links  ickle.menu  ickle.substvars  manpages  menu  postinst  postrm  preinst  prerm  rules
examples/: Makefile.am  shell.cpp
ickle/: AboutDialog.cpp  AboutDialog.h  AddContactDialog.cpp  AddContactDialog.h  AddGroupDialog.cpp  AddGroupDialog.h  AddMobileUserDialog.cpp  AddMobileUserDialog.h  AddUserDialog.cpp  AddUserDialog.h  AuthRespDialog.cpp  AuthRespDialog.h  AwayMessageDialog.cpp  AwayMessageDialog.h  ContactListView.cpp  ContactListView.h  ControlHandler.cpp  ControlHandler.h  Dir.cpp  Dir.h  EventSubstituter.cpp  EventSubstituter.h  EventSystem.cpp  EventSystem.h  FindTextDialog.cpp  FindTextDialog.h  History.cpp  History.h  IckleApplet.cpp  IckleApplet.h  IckleClient.cpp  IckleClient.h  IckleGUI.cpp  IckleGUI.h  Icons.cpp  Icons.h  IdleTimer.cpp  IdleTimer.h  LogWindow.cpp  LogWindow.h  (+63 more)
ickle/.deps/: AddMobileUserDialog.P  AddUserDialog.P  Contact.P  ContactList.P  ContactListView.P  IckleClient.P  IckleGUI.P  Icons.P  MessageBox.P  PromptDialog.P  Settings.P  SettingsDialog.P  UserInfoDialog.P  main.P
icons/: away.xpm  dnd.xpm  invisible.xpm
icons.doors/: dnd.xpm  occ.xpm  offline.xpm
icons.icq/.xvpics/: sms.xpm
icons/.xvpics/: away.xpm  dnd.xpm  ffc.xpm  invisible.xpm  message.xpm  na.xpm  occ.xpm  offline.xpm  online.xpm  sms.xpm  url.xpm
macros/: Makefile.am  gnome-gettext.m4  ickle.m4
pixmaps/: Makefile.am  delivery.xpm  info.xpm
po/: LINGUAS  Makevars  POTFILES.in  de.po
scripts/: gnomeicu2ickle.pl  licq2ickle.pl  micq2ickle.pl
share/: Makefile.am
share/icons/: Makefile.am  icons.conf
share/icons/doors/: Makefile.am  away.xpm  ffc.xpm  invisible.xpm  na.xpm  online.xpm
share/icons/eureka/: Makefile.am  away.xpm  dnd.xpm  ffc.xpm  invisible.xpm  na.xpm  occ.xpm  offline.xpm  online.xpm  sysmsg.xpm
share/icons/gnomeicu/: Makefile.am  away.xpm  chat.xpm  dnd.xpm  ffc.xpm  file.xpm  invisible.xpm  message.xpm  na.xpm  occ.xpm  offline.xpm  online.xpm  sysmsg.xpm  url.xpm
share/icons/ickle/: Makefile.am  ffc.xpm  message.xpm  na.xpm  occ.xpm  offline.xpm  online.xpm  sms.xpm  sysmsg.xpm
share/icons/icq/: Makefile.am  sms.xpm
share/icons/kit/: Makefile.am  dnd.xpm  invisible.xpm  occ.xpm  offline.xpm  sysmsg.xpm
share/icons/new/: Makefile.am  away.xpm  dnd.xpm  ffc.xpm  invisible.xpm  na.xpm  occ.xpm  offline.xpm  online.xpm  sysmsg.xpm  url.xpm
share/translations/: Makefile.am
src/: Cache.cpp  Cache.h  Client.cpp  Client.h  Contact.cpp  Contact.h  ContactList.cpp  ContactList.h  DCCache.h  DirectClient.cpp  DirectClient.h  ICBMCookie.cpp  ICBMCookie.h  ICBMCookieCache.h  ICQ.cpp  ICQ.h  Makefile  Makefile.am  Makefile.in  RequestIDCache.cpp  RequestIDCache.h  SNAC-GEN.cpp  SNAC-GEN.h  SNAC-LOC.cpp  SNAC-MSG.cpp  SNAC-MSG.h  SNAC-SRV.cpp  SNAC-SRV.h  SNAC-base.cpp  SNAC-base.h  SNAC.cpp  SNAC.h  TLV.cpp  TLV.h  Translator.cpp  Translator.h  UserInfoBlock.cpp  UserInfoBlock.h  Xml.h  buffer.cpp  (+7 more)
src/.deps/: Client.P  Contact.P  ContactList.P  SNAC.P  TLV.P  Xml.P  buffer.P  events.P  exceptions.P  logger.P  socket.P
test/: Makefile  Makefile.am  Makefile.in  test-client.cpp  test-xml  test-xml.cpp
test/.deps/: test-client.P  test-sms.P  test-sms.pp
