##
## Process with automake to produce Makefile.in
##

SUBDIRS = src ickle examples share

EXTRA_DIST = \
 scripts/licq2ickle.pl scripts/micq2ickle.pl \
 debian/README.Debian  debian/dirs             debian/postinst  debian/rules \
 debian/changelog      debian/docs             debian/postrm                 \
 debian/control        debian/ickle.substvars  debian/preinst                \
 debian/copyright      debian/menu             debian/prerm                  

