##
## Process with automake to produce Makefile.in
##

SUBDIRS = ickle share

EXTRA_DIST = THANKS NEWS \
 scripts/licq2ickle.pl scripts/micq2ickle.pl \
 debian/README                      debian/ickle-gnome.files \
 debian/changelog                   debian/ickle-gnome.manpages \
 debian/control                     debian/ickle-gnome.menu \
 debian/copyright                   debian/ickle.dirs \
 debian/ickle-common.README.Debian  debian/ickle.files \
 debian/ickle-common.docs           debian/ickle.manpages \
 debian/ickle-common.files          debian/ickle.menu \
 debian/ickle-dev.files             debian/ickle-gnome.dirs \
 debian/rules 
