##
## Process with automake to produce Makefile.in
##

SUBDIRS = ctrlsocket ickle control share macros

EXTRA_DIST = THANKS NEWS scripts/licq2ickle.pl scripts/micq2ickle.pl	\
scripts/gnomeicu2ickle.pl debian/README debian/changelog		\
debian/control debian/copyright debian/ickle-common.README.Debian	\
debian/ickle-common.docs debian/ickle-common.files			\
debian/ickle-gnome.dirs debian/ickle-gnome.files			\
debian/ickle-gnome.links debian/ickle-gnome.manpages			\
debian/ickle-gnome.menu debian/ickle.dirs debian/ickle.files		\
debian/ickle.links debian/ickle.manpages debian/ickle.menu		\
debian/rules
