##
## Process with automake to produce Makefile.in
##

translationsdir = $(pkgdatadir)/translations
dist_translations_DATA = \
 ASCII    FINNISH          LATIN_2       POLISH_NOPL     SWEDISH_NAMES      \
 CP437    FRENCH           MACINTOSH     PORTUGUESE      SWEDISH_NAMES_COM  \
 CP850    FRENCH_CANADIAN  PORTUGUESE_COM  SWISS              \
 GERMAN           RUSSIAN         UNITED_KINGDOM     \
 DANISH   HP_MCS           NEXT          RUSSIAN_ALT     UNITED_KINGDOM_COM \
 DEC_MCS  IRV              NORWEGIAN_1   RUSSIAN_WIN                        \
 DG_MCS   ITALIAN          NORWEGIAN_2   SPANISH                            \
 DUTCH    JIS              POLISH        SWEDISH     UKRAINIAN_WIN

