##
## Process with automake to produce Makefile.in
##

translationsdir = $(pkgdatadir)/translations
translations_DATA =					\
 ASCII FINNISH LATIN_2 POLISH_NOPL			\
 CP437 FRENCH MACINTOSH PORTUGUESE			\
 CP850 FRENCH_CANADIAN PORTUGUESE_COM SWISS		\
 GERMAN RUSSIAN UNITED_KINGDOM				\
 DANISH HP_MCS NEXT RUSSIAN_ALT UNITED_KINGDOM_COM	\
 DEC_MCS IRV NORWEGIAN_1 RUSSIAN_WIN			\
 DG_MCS ITALIAN NORWEGIAN_2 SPANISH			\
 DUTCH JIS POLISH UKRAINIAN_WIN
EXTRA_DIST = $(translations_DATA)
