##
## Process with automake to produce Makefile.in
##

icons_gnomeicudir = $(pkgdatadir)/icons/gnomeicu
icons_gnomeicu_DATA =  chat.xpm  file.xpm    na.xpm    online.xpm \
  dnd.xpm   invisible.xpm  occ.xpm   sms.xpm  away.xpm  ffc.xpm \
  message.xpm   offline.xpm  url.xpm
EXTRA_DIST = $(icons_gnomeicu_DATA)

